# wochenplaner

./: .dockerignore  .gitignore  LICENSE  README.md  app.py  calendar_render.py  constants.py  i18n.py  packages.txt  pdf_colors.py  pdf_context.py  pdf_export.py  plan_json.py  pyproject.toml  run_desktop.py  storage.py  templates.py  utils.py
.devcontainer/: Dockerfile  devcontainer-lock.json  devcontainer.json  post-create.sh
.streamlit/: config.toml
calendar_component/: __init__.py
calendar_component/frontend/: index.html
data/: 2026-03-16_wochenplan.json  beispiel.json
docs/: verification-pdf-export-1.5.md
html_pdf/: __init__.py  layout.py  render.py
html_pdf/static/: print.css  themes.css  tokens.css  typography.css
html_pdf/templates/: week.html
html_pdf/templates/partials/: activity_tile.html
static/: calendar.css
tests/: test_bugfixes.py  test_custom_activities.py  test_html_pdf_export.py  test_html_pdf_layout.py  test_note_display.py  test_pdf_colors.py  test_pdf_export.py  test_plan_json.py  test_plan_note.py
