[project]
name = "wochenplaner"
version = "0.1.0"
description = "Kostenloser Wochenplaner mit PDF-Export | Free weekly planner with PDF export"
readme = "README.md"
requires-python = ">=3.13"
dependencies = ["streamlit>=1.32.0", "reportlab>=4.2.0", "plotly>=5.18.0"]

[dependency-groups]
dev = ["ruff>=0.9.0"]

[tool.uv]
package = false

[tool.ruff]
line-length = 88
target-version = "py313"

[tool.ruff.lint]
select = ["E", "W", "F", "I", "UP", "B"]
ignore = ["E501"]

[tool.ruff.lint.isort]
known-first-party = [
    "constants",
    "utils",
    "calendar_render",
    "pdf_export",
    "i18n",
    "templates",
]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
