[project]
name = "wochenplaner"
version = "1.5.0"
description = "Kostenloser Wochenplaner mit PDF-Export | Free weekly planner with PDF export"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "streamlit>=1.44.0",
    "reportlab>=4.2.0",
    "plotly>=5.18.0",
    "streamlit-js-eval>=1.0.0",
    "jinja2>=3.1.0",
    "playwright>=1.49.0",
]

[dependency-groups]
dev = ["ruff>=0.9.0", "pytest>=8.0.0"]

[tool.uv]
package = false

[tool.pytest.ini_options]
pythonpath = ["."]

[tool.ruff]
line-length = 88
target-version = "py313"

[tool.ruff.lint]
select = ["E", "W", "F", "I", "UP", "B"]
ignore = ["E501"]

[tool.ruff.lint.isort]
known-first-party = [
    "calendar_component",
    "calendar_render",
    "constants",
    "html_pdf",
    "i18n",
    "pdf_context",
    "pdf_export",
    "plan_json",
    "storage",
    "templates",
    "utils",
]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
